:bug: Fix(style): fix recent post item content overflow

--- a/source/css/_layout/page.styl
+++ b/source/css/_layout/page.styl
@@ -16,6 +16,7 @@ galleryItemStyle(w, h)
 
   .content
     margin-top: 0.5rem
+    word-break: break-word
 
     p
       word-break: break-word
